[workspace]

members = [
    "np_base",
    "np_proto",
    "np_server",
    "np_test",
    "np_client",
]

# https://www.aloxaf.com/2018/09/reduce_rust_size/
[profile.release]
debug = false # 去除调试信息
panic = "abort"
lto = true
codegen-units = 1
strip = true        # Strip symbols from binary*
opt-level = "z"  # 最小化二进制文件大小

