[package]
name = "np_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.5.0", features = [] }
tokio = { version = "1", features = ["full"] }
log = "0.4.0"
async-trait = "0.1.75"
byteorder = "1.5.0"
anyhow = "1.0.79"

# 加密相关
rand = "0.8"
base64 = "0.22"
brotli = "6.0"
crypto_secretbox = "0.1.1"
hex-literal = "0.4.1"
socket2 = "0.5"

