[package]
name = "np_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.5.0", features = [] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.23.0" }
rustls-pemfile = { version = "2.1.3" }
log = "0.4.0"
async-trait = "0.1.75"
anyhow = "1.0.79"
tokio_kcp = { git = "https://github.com/tkzcfc/tokio_kcp.git" }
httparse = "1.10.1"
tokio-tungstenite = "0.27.0"

# 加密相关
rand = "0.8"
base64 = "0.22"
simplestcrypt = "0.1.3"
lz4_flex = { version = "0.11" }
socket2 = "0.5"
tokio-util = "0.7.14"
url = "2.5.4"
futures = "0.3.31"

