[package]
name = "np_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
kcp = ["tokio_kcp"]
ws = ["tokio-tungstenite"]
quic = ["s2n-quic"]

[dependencies]
bytes = { version = "1", features = [] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26"}
log = "0.4"
async-trait = "0.1"
anyhow = "1.0"
tokio_kcp = { git = "https://github.com/tkzcfc/tokio_kcp.git", optional = true }
httparse = "1.10"
tokio-tungstenite = {version = "0.27.0", optional = true}
s2n-quic = {version = "1", optional = true}


# 加密相关
rand = "0.8"
base64 = "0.22"
simplestcrypt = "0.2"
lz4_flex = { version = "0.11" }
socket2 = "0.5"
tokio-util = "0.7"
url = "2.5"
futures = "0.3"

