[package]
name = "np_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
np_base = { path = "../np_base" }
np_proto = { path = "../np_proto", default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26.2"}
webpki-roots = "1"
clap = { version = "4.4.12", features = ["derive"] }
anyhow = "1.0.86"
log = "0.4.20"
flexi_logger = { version = "0.27.3", features = ["async", "dont_minimize_extra_stacks"] }
bytes = "1.5.0"
byteorder = "1.5.0"
socket2 = "0.5"
once_cell = "1.19"
tokio_kcp = { git = "https://github.com/tkzcfc/tokio_kcp.git" }
tokio-tungstenite = { version = "0.27.0", features = ["__rustls-tls"] }
http = "1.3.1"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"