[package]
name = "np_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["full"]
tcp = ["socket2"]
kcp = ["tokio_kcp"]
ws = ["tokio-tungstenite", "np_base/ws"]
quic = ["s2n-quic"]
full = ["tcp", "kcp", "ws", "quic"]

[dependencies]
np_base = { path = "../np_base", default-features = false, features = []  }
np_proto = { path = "../np_proto", default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26"}
webpki-roots = "1"
clap = { version = "4.4.12", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
flexi_logger = { version = "0.31", features = ["async", "dont_minimize_extra_stacks"] }
bytes = "1"
byteorder = "1"
socket2 = {version = "0.6", optional = true}
once_cell = "1"
tokio_kcp = { git = "https://github.com/tkzcfc/tokio_kcp.git", optional = true }
tokio-tungstenite = { version = "0.27.0", features = ["__rustls-tls"], optional = true }
http = "1.3.1"
s2n-quic = {version = "1", optional = true}

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"