[package]
name = "np_client"
version = "1.0.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["full"]
full = ["tcp", "kcp", "ws", "quic"]
tcp = ["socket2"]
kcp = ["tokio_kcp"]
ws = ["tokio-tungstenite", "np_base/ws"]
quic = ["s2n-quic", "s2n-quic-rustls", "s2n-quic-core"]

[dependencies]
np_base = { path = "../np_base", default-features = false, features = []  }
np_proto = { path = "../np_proto", default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26"}
webpki-roots = "1"
clap = { version = "4.4.12", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
flexi_logger = { version = "0.31", features = ["async", "dont_minimize_extra_stacks"] }
bytes = "1"
byteorder = "1"
socket2 = {version = "0.6", optional = true}
once_cell = "1"
tokio_kcp = { git = "https://github.com/tkzcfc/tokio_kcp.git", optional = true }
tokio-tungstenite = { version = "0.27.0", features = ["__rustls-tls"], optional = true }
http = "1.3.1"
s2n-quic = { version = "1.69.0", optional = true, features = ["s2n-quic-rustls"] }
s2n-quic-rustls = {version = "0.69.0", optional = true}
s2n-quic-core = {version = "0.69.0", optional = true}

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"