[package]
name = "np_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
np_base = { path = "../np_base" }
np_proto = { path = "../np_proto", default-features = false }
tokio = { version = "1", features = ["full"] }
log = "0.4.0"
flexi_logger = { version = "0.27.3", features = ["async"] }
bytes = { version = "1", features = [] }
byteorder = "1.5.0"
async-trait = "0.1"
anyhow = { version = "1.0.79"}
once_cell = "1.19.0"
clap = { version = "4.4.12", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [ "mysql", "sqlite", "runtime-tokio"] }
sea-orm = { version = "0.12.14", features = ["sqlx-mysql", "sqlx-sqlite", "runtime-tokio"] }
rand = "0.8.5"
actix-web = { version = "4.4" }
actix-files = { version = "0.6" }
actix-cors = { version = "0.7" }
actix-identity = { version = "0.7" }
actix-session = { version = "0.9", features = ["cookie-session"] }
chrono = "0.4.31"
md5 = "0.7"

[dev-dependencies]

#ref https://github.com/launchbadge/sqlx
[profile.dev.package.sqlx-macros]
opt-level = 3

