[package]
name = "np_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
np_base = { path = "../np_base" }
np_proto = { path = "../np_proto", default-features = false }
tokio = { version = "1", features = ["full"] }
log = "0.4.0"
flexi_logger = { version = "0.27.3", features = ["async"] }
bytes = { version = "1", features = [] }
byteorder = "1.5.0"
async-trait = "0.1"
anyhow = { version = "1.0.79"}
once_cell = "1.19.0"
clap = { version = "4.4.12", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "1.1.13", features = ["sqlx-mysql", "sqlx-sqlite", "runtime-tokio"] }
rand = "0.8.5"
actix-web = { version = "4.11.0" }
actix-files = { version = "0.6.6" }
actix-cors = { version = "0.7.1" }
actix-identity = { version = "0.8.0" }
actix-session = { version = "0.10.1", features = ["cookie-session"] }
chrono = "0.4.31"
md5 = "0.7"
socket2 = "0.5"
tokio_kcp = { git = "https://github.com/tkzcfc/tokio_kcp.git" }
http = "1.3.1"

[dev-dependencies]
